
===Misc:
*INI configuration file has been added; a warning message will be issued if it could not be found.
*GetCalculatedPerkPoints now only returns 1 or 0 (support for Tweaks' iPerksPerLevel is scrapped).

===INI Options:
= "General" section
*Add: bResetInteriorResetsActors

= "Fatigue" section
*Add: bUseGamesettingsForFistFatigueDamage,
	bCreaturesDealMeleeFatigueDmg,
	bUnarmedWeaponsDealFatigueDmg

= "Repair" section
*Add: bNoSelfRepairingBrokenItems,
	bNoVendorRepairingBrokenItems

===Bug Fixes:
*Refactored functions with array arguments to work with inline (used to only work with array variables).
*Fix TopicInfoSetResponseStrings string memory leak
*Potentially fix the ShowRaceMenu fix not being applied (brain rot).

===New Functions:
= JSON Functions:
*ReadFromJSONFile
*WriteToJSONFile

= Cached INI Functions:
*SetINIValue_Cached
*GetINIFloatOrCreate_Cached
*GetINIStringOrCreate_Cached
*GetINIFloatOrDefault_Cached
*GetINIStringOrDefault_Cached
*HasINISetting_Cached
*ClearFileCacheShowOff
*SaveCachedIniFile
*ReloadIniCache

= Misc Functions:
*GetCalculatedItemValue
*ResetInteriorAlt


//===v1.46

*AS OF THIS VERSION, xNVSE 6.2.6 or greater is required.*

= Bug Fixes:
*Fixed ReadJSONFromFile sometimes having corrupted string data.


//===v1.50

*AS OF THIS VERSION, xNVSE 6.2.8 or greater is required.*

===Bug Fixes:
* ShowPerkMenu: 
- Copied code from Tweaks to prevent perks from being selected if there are none to assign (used to go to -1 perks).
- Copied code from Tweaks to force the perk menu to open even if not on a perk level (allows previewing perks).
- Copied code from Tweaks to allow multiple perks to be selected.

===New Functions:
* SetEnableParent
* GetEquippedWeapon
* GetEquippedWeaponRef
* ??

===New Event Handlers (for SetEventHandlerAlt):
* ??


====== (Template:)

//===v???
===Bug Fixes:
*

===New Functions:
*

******DON'T FORGET TO UPDATE THE PLUGIN VERSION BEFORE EVERY RELEASE*********